products-info responsive layout bug fixed

--- a/css/custom css/products-info.scss
+++ b/css/custom css/products-info.scss
@@ -9,8 +9,9 @@
     }
 }
 
-
-
+.hidden-flow {
+    overflow-x: hidden;
+}
 
 body {
     background-color: #f5f5f7;
@@ -874,5 +875,18 @@ body {
         height: 25px;
         margin-left: 1em;
         margin-top: -1em;
+    }
+}
+
+@media only screen and (max-width:500px){
+    #img-cont {
+        transform: scale(0.7);
+        
+    }
+
+    .info-cont,.shadow-cont {
+        transform: scale(0.9);
+        margin-top: -3em;
+        margin-bottom: -3em;
     }
 }
